@@ -48,6 +48,7 @@ Engine changes
 * Fix crash when the teletransporter after stairs is missing.
 * Fix non-blocking stream turns after going south (#648).
 * Fix text_surface:set_rendering_mode() not working (#833).
+* Fix possible freeze when changing the position of a path finding entity.
 * Fix circle_movement:set_initial_angle() not working (#721).
 * Fix straight movement setting speed to zero when reaching obstacles (#633).
 * Fix support of joypads with multiple axes.
